crates/sutura-app/tests/snapshots/revenue-by-channel__rows@datafusion.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
channel	period	revenue
Text(store)	Text(2026-06-01)	Integer(70123)
Text(web)	Text(2026-06-01)	Integer(499899)
