crates/sutura-app/tests/snapshots/revenue-by-channel__sql@postgres.snap
---
source: crates/sutura-app/tests/golden/dialects.rs
expression: query.sql()
---
SELECT "orders"."channel" AS "channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) AS "period", SUM("orders"."amount_cents") AS "revenue" FROM "orders" WHERE "orders"."order_date" >= $1 AND "orders"."order_date" < $2 GROUP BY "orders"."channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) ORDER BY "orders"."channel", CAST(DATE_TRUNC('month', "orders"."order_date") AS DATE) LIMIT 10000
